lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:4: error: ')' expected but '<-' found.
	if (getVitesseY<-10) {
                       ^Lander:9: error: illegal start of simple expression
} 
^